--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -1,10 +1,10 @@
 name: Build Windows release
 
 on:
-  release:
-    types:
-      - published
   workflow_dispatch:
+  # release:
+  #   types:
+  #     - published
 
 jobs:
   build-windows-release:
