--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -19,7 +19,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Platypus
-      run: brew install platypus
+      run: |
+        brew install platypus
+        brew --prefix platypus
 
     - name: Install Miniconda
       run: |
@@ -55,7 +57,7 @@ jobs:
 
     - name: Create Installer
       run: |
-        /usr/local/bin/platypus --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist ${RELEASE_VERSION} installer'  --interface-type 'Progress Bar'  --interpreter '$HOME/miniforge/envs/env-platypus/bin/python'   --app-version '${RELEASE_VERSION}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.py'
+        '/opt/homebrew/bin/platypus' --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist ${RELEASE_VERSION} installer'  --interface-type 'Progress Bar'  --interpreter '$HOME/miniforge/envs/env-platypus/bin/python'   --app-version '${RELEASE_VERSION}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.py'
 
     - name: Get Upload URL for Release
       id: get_release
