--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Platypus
-      run: curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/platypus" -o "${GITHUB_WORKSPACE}/install_files/macos/platypus"
+      run: curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/platypus" -o "${{ github.workspace }}/install_files/macos/platypus"
         # brew install platypus
         # brew install --cask platypus
         # brew --prefix platypus
@@ -45,7 +45,7 @@ jobs:
       shell: bash
       run: |
         # Define the file path
-        FILE_PATH="${GITHUB_WORKSPACE}/install_files/macos/platypus-install-compiler.py"
+        FILE_PATH="${{ github.workspace }}/install_files/macos/platypus-install-compiler.py"
     
         # Create a new file with the VERSION line
         echo "VERSION = \"${RELEASE_VERSION}\"" > newFile.py
@@ -58,7 +58,7 @@ jobs:
 
     - name: Create Installer
       run: |
-        '${GITHUB_WORKSPACE}/install_files/macos/platypus' --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist ${RELEASE_VERSION} installer'  --interface-type 'Progress Bar'  --interpreter '$HOME/miniforge/envs/env-platypus/bin/python'   --app-version '${RELEASE_VERSION}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.py'
+        '${{ github.workspace }}/install_files/macos/platypus' --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist ${RELEASE_VERSION} installer'  --interface-type 'Progress Bar'  --interpreter '$HOME/miniforge/envs/env-platypus/bin/python'   --app-version '${RELEASE_VERSION}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.py'
 
     - name: Get Upload URL for Release
       id: get_release
