--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -23,8 +23,8 @@ jobs:
         curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/platypus" -o "${{ github.workspace }}/install_files/macos/platypus"
         chmod +x "${{ github.workspace }}/install_files/macos/platypus"
 
-        curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "/usr/local/share/platypus/ScriptExec"
-        chmod +x "/usr/local/share/platypus/ScriptExec"
+        curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/ScriptExec"
+        chmod +x "${{ github.workspace }}/install_files/macos/ScriptExec"
         
         # brew install platypus
         # brew install --cask platypus
