--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -64,6 +64,7 @@ jobs:
 
     - name: Create Installer
       run: |
+        export PATH="${{ github.workspace }}/install_files/macos:$PATH"
         '${{ github.workspace }}/install_files/macos/platypus' --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist ${RELEASE_VERSION} installer'  --interface-type 'Progress Bar'  --interpreter '$HOME/miniforge/envs/env-platypus/bin/python'   --app-version '${RELEASE_VERSION}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.py'
 
     - name: Get Upload URL for Release
