--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -26,7 +26,7 @@ jobs:
         curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/ScriptExec"
         chmod +x "${{ github.workspace }}/install_files/macos/ScriptExec"
 
-        mkdir "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/"
+        mkdir -p "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/"
         curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
         chmod +x "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
         
