--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -30,9 +30,9 @@ jobs:
         curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
         chmod +x "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
         
-        # brew install platypus
-        # brew install --cask platypus
-        # brew --prefix platypus
+        brew install platypus
+        brew install --cask platypus
+        brew --prefix platypus
 
     - name: Install Miniconda
       run: |
