--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -30,9 +30,9 @@ jobs:
         curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
         chmod +x "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
         
-        brew install platypus
+        # brew install platypus
         brew install --cask platypus
-        brew --prefix platypus
+        # brew --prefix platypus
 
     - name: Install Miniconda
       run: |
@@ -70,7 +70,7 @@ jobs:
       run: |
         export PATH="${{ github.workspace }}/install_files/macos:$PATH"
         export PLATYPUS_PATH="${{ github.workspace }}/install_files/macos"
-        '${{ github.workspace }}/install_files/macos/platypus' --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist ${RELEASE_VERSION} installer'  --interface-type 'Progress Bar'  --interpreter '$HOME/miniforge/envs/env-platypus/bin/python'   --app-version '${RELEASE_VERSION}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.py'
+        "/Applications/Platypus.app/Contents/MacOS/Platypus" --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist ${RELEASE_VERSION} installer'  --interface-type 'Progress Bar'  --interpreter '$HOME/miniforge/envs/env-platypus/bin/python'   --app-version '${RELEASE_VERSION}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.py'
 
     - name: Get Upload URL for Release
       id: get_release
