--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -20,18 +20,25 @@ jobs:
 
     - name: Install Platypus
       run: |
-        curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/platypus" -o "${{ github.workspace }}/install_files/macos/platypus"
-        chmod +x "${{ github.workspace }}/install_files/macos/platypus"
+        # curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/platypus" -o "${{ github.workspace }}/install_files/macos/platypus"
+        # chmod +x "${{ github.workspace }}/install_files/macos/platypus"
 
-        curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/ScriptExec"
-        chmod +x "${{ github.workspace }}/install_files/macos/ScriptExec"
+        # curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/ScriptExec"
+        # chmod +x "${{ github.workspace }}/install_files/macos/ScriptExec"
 
-        mkdir -p "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/"
-        curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
-        chmod +x "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
+        # mkdir -p "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/"
+        # curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
+        # chmod +x "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
+
+
+        sudo mkdir -p '/usr/local/share/platypus/'
+        sudo cp "${{ github.workspace }}/install_files/macos/ScriptExec" '/usr/local/share/platypus/'
+        sudo cp "${{ github.workspace }}/install_files/macos/platypus_clt" '/usr/local/share/platypus/'
+        sudo cp -r "${{ github.workspace }}/install_files/macos/MainMenu.nib" '/usr/local/share/platypus/'
+
         
         # brew install platypus
-        brew install --cask platypus
+        # brew install --cask platypus
         # brew --prefix platypus
 
     - name: Install Miniconda
