--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -77,9 +77,7 @@ jobs:
 
     - name: Create Installer
       run: |
-        # export PATH="${{ github.workspace }}/install_files/macos:$PATH"
-        # export PLATYPUS_PATH="${{ github.workspace }}/install_files/macos"
-        sudo '/usr/local/share/platypus/platypus_clt' --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist ${RELEASE_VERSION} installer'  --interface-type 'Progress Bar'  --interpreter '$HOME/miniforge/envs/env-platypus/bin/python'   --app-version '${RELEASE_VERSION}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.py'
+        sudo '/usr/local/share/platypus/platypus_clt' --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist ${{ env.RELEASE_VERSION }} installer'  --interface-type 'Progress Bar'  --interpreter '$HOME/miniforge/envs/env-platypus/bin/python'   --app-version '${{ env.RELEASE_VERSION }}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.py'
 
     - name: List files in macOS install directory
       run: |
@@ -104,7 +102,7 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ env.UPLOAD_URL }}  # Use the updated environment variable
-        asset_path: "install_files/macos/EcoAssist-${{ env.RELEASE_VERSION }}-macos.app"
+        asset_path: "${{ github.workspace }}/install_files/macos/EcoAssist-${{ env.RELEASE_VERSION }}-macos.app"
         asset_name: "EcoAssist-${{ env.RELEASE_VERSION }}-macos.app"
         asset_content_type: application/octet-stream
       env:
