--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -97,13 +97,18 @@ jobs:
           // Write the upload URL to the environment file
           const fs = require('fs');
           fs.appendFileSync(process.env.GITHUB_ENV, `UPLOAD_URL=${release.data.upload_url}\n`);
+
+    - name: Compress the macOS installer
+      run: |
+        cd "${{ github.workspace }}/install_files/macos"
+        zip -r "EcoAssist-${{ env.RELEASE_VERSION }}-installer.zip" "EcoAssist-${{ env.RELEASE_VERSION }}-installer.app"
     
     - name: Upload Asset to GitHub Release
       uses: actions/upload-release-asset@v1
       with:
-        upload_url: ${{ env.UPLOAD_URL }}  # Use the updated environment variable
-        asset_path: "${{ github.workspace }}/install_files/macos/EcoAssist-${{ env.RELEASE_VERSION }}-installer.app"
-        asset_name: "Installer for macOS ${{ env.RELEASE_VERSION }} (.app)"
+        upload_url: ${{ env.UPLOAD_URL }}
+        asset_path: "${{ github.workspace }}/install_files/macos/EcoAssist-${{ env.RELEASE_VERSION }}-installer.zip"
+        asset_name: "${{ env.RELEASE_VERSION }} MacOS installer (.zip)"
         asset_content_type: application/octet-stream
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
