--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -20,16 +20,6 @@ jobs:
 
     - name: Install Platypus
       run: |
-        # curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/platypus" -o "${{ github.workspace }}/install_files/macos/platypus"
-        # chmod +x "${{ github.workspace }}/install_files/macos/platypus"
-
-        # curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/ScriptExec"
-        # chmod +x "${{ github.workspace }}/install_files/macos/ScriptExec"
-
-        # mkdir -p "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/"
-        # curl -L "https://storage.googleapis.com/github-release-files-storage/Platypus_CLI_DO_NOT_DELETE/ScriptExec" -o "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
-        # chmod +x "${{ github.workspace }}/install_files/macos/usr/local/share/platypus/ScriptExec"
-
 
         sudo mkdir -p '/usr/local/share/platypus/'
         sudo cp "${{ github.workspace }}/install_files/macos/ScriptExec" '/usr/local/share/platypus/'
@@ -38,10 +28,7 @@ jobs:
 
         sudo chmod +x '/usr/local/share/platypus/ScriptExec'
         sudo chmod +x '/usr/local/share/platypus/platypus_clt'
-        
-        # brew install platypus
-        # brew install --cask platypus
-        # brew --prefix platypus
+
 
     - name: Install Miniconda
       run: |
@@ -77,7 +64,7 @@ jobs:
 
     - name: Create Installer
       run: |
-        sudo '/usr/local/share/platypus/platypus_clt' --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist-${{ env.RELEASE_VERSION }}-installer'  --interface-type 'Progress Bar'  --interpreter '$HOME/miniforge/envs/env-platypus/bin/python'   --app-version '${{ env.RELEASE_VERSION }}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.py'
+        sudo '/usr/local/share/platypus/platypus_clt' --app-icon '${{ github.workspace }}/install_files/macos/logo.icns'  --name 'EcoAssist-${{ env.RELEASE_VERSION }}-installer'  --interface-type 'Progress Bar'  --interpreter '/bin/bash'   --app-version '${{ env.RELEASE_VERSION }}'  '${{ github.workspace }}/install_files/macos/platypus-install-compiler.sh'
 
     - name: List files in macOS install directory
       run: |
