--- a/.github/workflows/test-platypus.yml
+++ b/.github/workflows/test-platypus.yml
@@ -95,7 +95,7 @@ jobs:
       with:
         upload_url: ${{ env.UPLOAD_URL }}
         asset_path: "${{ github.workspace }}/install_files/macos/EcoAssist-${{ env.RELEASE_VERSION }}-installer.zip"
-        asset_name: "${{ env.RELEASE_VERSION }} MacOS installer (.zip)"
+        asset_name: "MacOS-installer-${{ env.RELEASE_VERSION }}.zip"
         asset_content_type: application/octet-stream
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
